@@ -71,10 +71,13 @@ The beam printing code has been completely rewritten, and now includes
 support for feathered beaming,
 
 @lilypond[ragged-right,fragment,relative=2]
+\featherDurations #(ly:make-moment 3 4) 
+{
   \override Beam #'grow-direction = #LEFT
   c16[
     c c c
-    c c c c ] 
+    c c c c ]
+    }
 @end lilypond 
 
 This feature was sponsored by Jamie Bullock.
